--- a/src/app/pages/shared/nav/nav.component.html
+++ b/src/app/pages/shared/nav/nav.component.html
@@ -3,9 +3,9 @@
     [mode]="(isHandset$ | async) ? 'over' : 'side'" [opened]="(isHandset$ | async) === false">
     <mat-toolbar>Menu</mat-toolbar>
     <mat-nav-list>
-      <a mat-list-item href="#">Link 1</a>
-      <a mat-list-item href="#">Link 2</a>
-      <a mat-list-item href="#">Link 3</a>
+      <a mat-list-item href="/show">クイズ</a>
+      <a mat-list-item href="/setting">設定</a>
+      <a mat-list-item href="/result">成績</a>
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
@@ -16,6 +16,6 @@
       </button>
       <span>空港当てゲーム</span>
     </mat-toolbar>
-    <!-- Add Content Here -->
+    <!-- COONTENT -->
   </mat-sidenav-content>
 </mat-sidenav-container>
