--- a/src/app/pages/question-show/question-show.component.scss
+++ b/src/app/pages/question-show/question-show.component.scss
@@ -3,3 +3,13 @@
   height:80px;
   margin: 1px 1px 1px 1px;
 }
+.result{
+  padding: 1em;
+  font-size: 5em;
+}
+
+.title{
+  font-size: 4em;
+  font-weight: bold;
+  padding-top:1em;
+}
